--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,6 @@ hibernate.hbm2ddl.auto: update
 entitymanager.packagesToScan: qingyun
 
 
-
-
 spring.http.multipart.enabled=true
 # Enable support of multi-part uploads.
 #spring.http.multipart.file-size-threshold=0 
@@ -41,3 +39,11 @@ logging.level.org.hibernate=ERROR
 logging.level.qingyun.ele=DEBUG
 
 filePath=/ele/ele_files/
+
+
+# Email (MailProperties)
+spring.mail.default-encoding=UTF-8
+spring.mail.host=smtp.qiye.163.com
+spring.mail.password=ysd123123
+spring.mail.protocol=smtp
+spring.mail.username=system@yashidun.com.cn
