modified .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
 /target/
+
+# Eclipse
+.settings/
+.metadata/
+.classpath
+.project
+target/
+
+*/.settings/
+*/.metadata/
+*/.classpath
+*/.project
+
+*/target/*
+*/.settings/*
+*/.springBeans
+
+# IDEA #
+.idea/
+out/
+*.iml
