--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ out/
 
 application.properties
 hibernate.properties
+
+src/main/resources/application.properties
+src/main/resources/hibernate.properties
