--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Database
 db.driver: com.mysql.jdbc.Driver
-db.url:jdbc:mysql://192.168.1.105:3306/ele?characterEncoding=utf8&useSSL=false
+db.url:jdbc:mysql://localhost:3306/ele?characterEncoding=utf8&useSSL=false
 db.username:ele
 db.password:jms2015
 
@@ -28,6 +28,7 @@ spring.http.multipart.resolve-lazily=false
 
 
 server.port=9997
+#server.port=9996
 server.session-timeout=30
 server.context-path= /ele
 server.servlet-path= /
