--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,7 @@ server.servlet-path= /
 
 logging.level.root=WARN
 logging.level.org.springframework.web=WARN
+logging.level.org.springframework.boot.actuate=DEBUG
 logging.level.org.hibernate=ERROR
 logging.level.qingyun.ele=DEBUG
 
@@ -48,3 +49,8 @@ spring.mail.host=smtp.qiye.163.com
 spring.mail.password=ysd123123
 spring.mail.protocol=smtp
 spring.mail.username=system@yashidun.com.cn
+
+
+#actuator
+management.context-path=/actuator
+management.security.enabled=false
